--- a/README
+++ b/README
@@ -2,3 +2,5 @@ Mapa za različne programe
 
 Trenutno:
 -merge sort
+-C++ knjižnica za delo z binarnimi matrikami
+-C++ program za računanje hammingovih kod
